--- a/level-1/index.html
+++ b/level-1/index.html
@@ -44,7 +44,7 @@
 
                     <header class="content-mid-header"></header>
 
-                    <div class="content"></div>
+                    <div class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos fuga magni vitae quos ab quis minus numquam porro illum temporibus illo nemo assumenda ipsum, laudantium dolorem rerum natus labore voluptates.</div>
 
                 </section>
 
